# mxklabs-cpp-workflow-test1

./: CMakeLists.txt  ExampleCppLib1Config.cmake.in  README.md
.github/workflows/: CI.yml  CI.yml_disabled
include/example_cpp_lib1/: foo.hpp
src/example_cpp_lib1/: foo.cpp  githash.cpp.in  githash.hpp
